posiGen_FullsendBox/src/objects/Sales_Order__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>R00N40000001jWqAEAU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bill_to_Address_1__c</fullName>
        <label>Bill to Address 1</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_to_Address_2__c</fullName>
        <label>Bill to Address 2</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_to_City__c</fullName>
        <label>Bill to City</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_to_Company_Name__c</fullName>
        <label>Bill to Company Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_to_Country__c</fullName>
        <label>Bill to Country</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_to_Name__c</fullName>
        <label>Bill to Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_to_State__c</fullName>
        <label>Bill to State</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_to_Zip_Code__c</fullName>
        <label>Bill to Zip Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deal</label>
        <referenceTo>Deal__c</referenceTo>
        <relationshipLabel>Sales Orders</relationshipLabel>
        <relationshipName>Sales_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Document_Number__c</fullName>
        <label>Document Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <label>Document Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Import_Id__c</fullName>
        <label>Import Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Import_Sales_Order_Created_Date__c</fullName>
        <label>Import Sales Order Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Import_Source__c</fullName>
        <label>Import Source</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Intacct_Entity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Intacct Entity</label>
        <referenceTo>Intacct_Entity__c</referenceTo>
        <relationshipLabel>Sales Orders</relationshipLabel>
        <relationshipName>Sales_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Opp_Numeric_ID__c</fullName>
        <label>Opp Numeric ID</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_ID__c</fullName>
        <description>This returns a text version (no hyperlink of the related Opportunity ID), useful for triggers.</description>
        <formula>Opportunity__r.Id</formula>
        <label>Opportunity ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>R00N40000001jWqUEAU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Entity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Entity</label>
        <referenceTo>Intacct_Entity__c</referenceTo>
        <relationshipLabel>Sales Orders (Parent Entity)</relationshipLabel>
        <relationshipName>Sales_Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reference_Number__c</fullName>
        <label>Reference Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_Date__c</fullName>
        <label>Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ship_to_Address_1__c</fullName>
        <label>Ship to Address 1</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_to_Address_2__c</fullName>
        <label>Ship to Address 2</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_to_City__c</fullName>
        <label>Ship to City</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_to_Company_Name__c</fullName>
        <label>Ship to Company Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_to_Country__c</fullName>
        <label>Ship to Country</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_to_Name__c</fullName>
        <label>Ship to Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_to_State__c</fullName>
        <label>Ship to State</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_to_Zip_Code__c</fullName>
        <label>Ship to Zip Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subtotal__c</fullName>
        <label>Subtotal</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Terms__c</fullName>
        <label>Terms</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <label>Total</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Sales Order</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>State__c</columns>
        <columns>Bill_to_Address_1__c</columns>
        <columns>Bill_to_State__c</columns>
        <columns>Date__c</columns>
        <columns>Document_Number__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Closed_Sales_Order</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Date__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Ship_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>State__c</field>
            <operation>equals</operation>
            <value>Converted</value>
        </filters>
        <label>Closed Sales Order</label>
    </listViews>
    <listViews>
        <fullName>Test_View</fullName>
        <columns>NAME</columns>
        <columns>State__c</columns>
        <columns>Document_Number__c</columns>
        <columns>Bill_to_Address_1__c</columns>
        <columns>Bill_to_State__c</columns>
        <columns>Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Document_Number__c</field>
            <operation>equals</operation>
            <value>SO-009202</value>
        </filters>
        <label>Test View</label>
    </listViews>
    <nameField>
        <label>Sales Order No</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>